[tool.poetry]
name = "hierarchical-forecast"
version = "0.1.0"
description = "A production-grade Python library for hierarchical time series forecasting with statistical reconciliation"
authors = ["Bashir Alam <bashir.alam@abo.fi>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/bashiralam185/hierarchical-forecast"
repository = "https://github.com/bashiralam185/hierarchical-forecast"
documentation = "https://github.com/bashiralam185/hierarchical-forecast"
keywords = ["forecasting", "hierarchical", "time-series", "reconciliation", "machine-learning"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
packages = [{include = "hierarchical_forecast"}]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26"
pandas = "^2.1"
scikit-learn = "^1.4"
statsmodels = "^0.14"
lightgbm = "^4.3"
torch = "^2.2"
fastapi = "^0.111"
uvicorn = {extras = ["standard"], version = "^0.29"}
pydantic = "^2.7"
pydantic-settings = "^2.2"
joblib = "^1.4"
loguru = "^0.7"
typer = "^0.12"
rich = "^13.7"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2"
pytest-cov = "^5.0"
httpx = "^0.27"
ruff = "^0.4"
mypy = "^1.10"
pre-commit = "^3.7"

[tool.poetry.group.dashboard.dependencies]
streamlit = "^1.35"
plotly = "^5.22"
streamlit-option-menu = "^0.3"

[tool.poetry.scripts]
hf-api = "hierarchical_forecast.api.main:run_server"
hf-dashboard = "dashboard.app:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "B", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=hierarchical_forecast --cov-report=term-missing --cov-report=xml"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
